@@ -8,9 +8,6 @@ import java.util.stream.Collectors;
 import org.fenixedu.academic.domain.Degree;
 import org.fenixedu.academic.domain.DegreeCurricularPlan;
 import org.fenixedu.academic.domain.GrantOwnerType;
-import org.fenixedu.academic.domain.ProfessionType;
-import org.fenixedu.academic.domain.ProfessionalSituationConditionType;
-import org.fenixedu.academic.domain.SchoolLevelType;
 import org.fenixedu.academic.domain.SchoolPeriodDuration;
 import org.fenixedu.academic.domain.candidacy.IngressionType;
 import org.fenixedu.academic.domain.curriculum.grade.GradeScale;
@@ -45,11 +42,11 @@ import com.google.common.collect.Sets;
 import pt.ist.fenixframework.FenixFramework;
 
 public enum LegalMappingType implements ILegalMappingType {
-    
-    BOOLEAN, GENDER, ID_DOCUMENT_TYPE, CYCLE_TYPE, REGIME_TYPE, GRANT_OWNER_TYPE, GRANT_OWNER_BY_STATUTE_TYPE, REGISTRATION_INGRESSION_TYPE, MARITAL_STATUS,
-    SCHOOL_LEVEL, EDUCATION_LEVEL, PROFESSIONAL_SITUATION_CONDITION, PROFESSIONAL_STATUS, PROFESSION_TYPE, PROFESSION_CATEGORY,
+
+    BOOLEAN, GENDER, ID_DOCUMENT_TYPE, CYCLE_TYPE, REGIME_TYPE, GRANT_OWNER_TYPE, GRANT_OWNER_BY_STATUTE_TYPE,
+    REGISTRATION_INGRESSION_TYPE, MARITAL_STATUS, EDUCATION_LEVEL, PROFESSIONAL_STATUS, PROFESSION_CATEGORY,
     HIGH_SCHOOL_TYPE, SCHOOL_PERIOD_DURATION, INTERNATIONAL_MOBILITY_PROGRAM, INTERNATIONAL_MOBILITY_ACTIVITY, CURRICULAR_YEAR,
-    REGIME_FREQUENCIA, PRECEDENT_SCHOOL_LEVEL, PRECEDENT_EDUCATION_LEVEL,
+    REGIME_FREQUENCIA, PRECEDENT_EDUCATION_LEVEL,
     INTERNATIONAL_MOBILITY_PROGRAM_AGREEMENT, GRADE, INTEGRATED_MASTER_FIRST_CYCLE_CODES,
     DEGREE_CURRICULAR_PLAN_DEGREE_OFICIAL_CODE;
 
@@ -75,18 +72,11 @@ public enum LegalMappingType implements ILegalMappingType {
             return Sets.newHashSet(Bennu.getInstance().getIngressionTypesSet());
         case MARITAL_STATUS:
             return Sets.newHashSet(MaritalStatus.values());
-        case SCHOOL_LEVEL:
-        case PRECEDENT_SCHOOL_LEVEL:
-            return Sets.newHashSet(SchoolLevelType.values());
         case EDUCATION_LEVEL:
         case PRECEDENT_EDUCATION_LEVEL:
             return EducationLevelType.findAll().collect(Collectors.toSet());
-        case PROFESSIONAL_SITUATION_CONDITION:
-            return Sets.newHashSet(ProfessionalSituationConditionType.values());
         case PROFESSIONAL_STATUS:
             return ProfessionalStatusType.findAll().collect(Collectors.toSet());
-        case PROFESSION_TYPE:
-            return Sets.newHashSet(ProfessionType.values());
         case PROFESSION_CATEGORY:
             return ProfessionCategoryType.findAll().collect(Collectors.toSet());
         case HIGH_SCHOOL_TYPE:
@@ -193,28 +183,11 @@ public enum LegalMappingType implements ILegalMappingType {
             final MaritalStatus maritalStatus = MaritalStatus.valueOf(key);
             mls = mls.with(I18N.getLocale(), maritalStatus.getLocalizedName());
             return mls;
-        case SCHOOL_LEVEL:
-        case PRECEDENT_SCHOOL_LEVEL:
-            EducationLevelType educationLevelType = EducationLevelType.findByCode(key).orElseThrow(
-                    () -> new IllegalArgumentException(
-                            LegalPTUtil.bundleI18N("error.educationLevelType.doesnt.exist", key).getContent()));
-            return educationLevelType.getName();
         case EDUCATION_LEVEL:
         case PRECEDENT_EDUCATION_LEVEL:
             return ((EducationLevelType) FenixFramework.getDomainObject(key)).getName();
-        case PROFESSIONAL_SITUATION_CONDITION:
-            ProfessionalStatusType professionalStatusType = ProfessionalStatusType.findByCode(key).orElseThrow(
-                    () -> new IllegalArgumentException(
-                            LegalPTUtil.bundleI18N("error.professionalStatusType.doesnt.exist", key).getContent()));
-
-            return professionalStatusType.getName();
         case PROFESSIONAL_STATUS:
             return ((ProfessionalStatusType) FenixFramework.getDomainObject(key)).getName();
-        case PROFESSION_TYPE:
-            ProfessionCategoryType professionCategoryType = ProfessionCategoryType.findByCode(key).orElseThrow(
-                    () -> new IllegalArgumentException(
-                            LegalPTUtil.bundleI18N("error.professionCategoryType.doesnt.exist", key).getContent()));
-            return professionCategoryType.getName();
         case PROFESSION_CATEGORY:
             return ((ProfessionCategoryType) FenixFramework.getDomainObject(key)).getName();
         case HIGH_SCHOOL_TYPE:
